--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             《长大》 <br>
             <input type="submit" value="提交" >
              <input type="button" name="viewresult" value="查看" >
-             <a href="https://wcx123.github.io/home.html">新浪-最喜爱电视剧评选</a>
+             <a href="https://github.com/wcx123/wcx123.github.io/blob/master/home.html">新浪-最喜爱电视剧评选</a>
             </td>
        </tr>
     </table>
