--- a/qianming.html
+++ b/qianming.html
@@ -22,7 +22,7 @@
 
 <body>
 <div id="qianming">
-	<div class="tupian"><img src="37306.jpg" /></div>
+	<div class="tupian"><img src="http://pic67.nipic.com/file/20150514/21036787_181947848862_2.jpg" /></div>
 </div>
 <div id="ming">
 	王彩霞
