--- a/qianming.html
+++ b/qianming.html
@@ -5,16 +5,17 @@
 	#qianming{
 		border:3px #0000CC solid;
 		padding:15px;
-		float:left;}
+		float:left;
+		margin:0px auto;}
 	.tupian{
 		border:4px #CC3333 solid;}
 	#ming{
 		position:absolute;
-		left:520px;
-		top:560px;
+		left:600px;
+		top:960px;
 		font-family:"华文行楷";;
 		font-size:35px;
-		color:#303;}	
+		color:#333;}	
 </style>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>无标题文档</title>
@@ -22,7 +23,7 @@
 
 <body>
 <div id="qianming">
-	<div class="tupian"><img src="http://pic67.nipic.com/file/20150514/21036787_181947848862_2.jpg" /></div>
+	<div class="tupian"><img src="http://jy.sccnn.com/zb_users/upload/2017/04/remoteimage2_20170420100120_26248.jpeg" /></div>
 </div>
 <div id="ming">
 	王彩霞
