--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
             <input type="submit" value="提交" >
              <input type="button" name="viewresult" value="查看" >
              <a href="home.html">新浪-最喜爱电视剧评选</a>
+	     <p><a href="qianming.html">我的个性签名</a></p>
             </td>
        </tr>
     </table>
