--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
             《长大》 <br>
             <input type="submit" value="提交" >
              <input type="button" name="viewresult" value="查看" >
-             <a href="home.html">新浪-最喜爱电视剧评选</a>
-	     <p><a href="qianming.html">我的个性签名</a></p>
+		<p><a href="home.html">我的项目四（表单）</a></p>
+	     <p><a href="qianming.html">我的个性签名（项目五）</a></p>
             </td>
        </tr>
     </table>
