--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		text-decoration:underline;}
 </style>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>无标题文档</title>
+<title>热点调查</title>
 </head>
 
 <body>
