--- a/home.html
+++ b/home.html
@@ -72,7 +72,7 @@
 </style>
 <link href="file:///C|/Users/Administrator/Desktop/tab1.css" rel="stylesheet" type="text/css" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>无标题文档</title>
+<title>追忆往事，展望未来</title>
 </head>
 
 <body id="home">
