--- a/xiangmuliu.html
+++ b/xiangmuliu.html
@@ -9,12 +9,12 @@
 	background:#C99;
 	height:150px;}
 	.left{
-		background:#963;
+		
 		height:550px;}
 	.right{
-		background:#666;
+		background:#FCC;
 		float:right;
-		width:300px;
+		width:250px;
 		height:550px;}
 	.foot{
 		background:#C33;}
@@ -39,11 +39,13 @@
 
 <body>
 <div id="zhengti">
-	<div class="top">top</div>
+	<div class="top">
+    	<img src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1495509565&di=11816f4992a625b9bd801766c4066d49&imgtype=jpg&er=1&src=http%3A%2F%2Fpic2.ooopic.com%2F12%2F38%2F01%2F53bOOOPICc4_1024.jpg" width="881" height="298" />
+    </div>
     <div class="kongbai"></div>
-    <div class="right">
+  <div class="right">
     	<div class="tongji">
-        	<div><img src="样式统计.jpg" width="300" height="32" /></div>
+        	<div><img src="样式统计.jpg" width="252" height="26" /></div>
         	<ul>
         		<li>用户：893人</li>
             	<li>日志：4397个</li>
@@ -51,14 +53,14 @@
          	</ul>
         </div>
         <div class="boke">
-        <div><img src="热门博客.jpg" width="300" height="33" /></div>
+        <div><img src="热门博客.jpg" width="252" height="27" /></div>
         	<ul>
         		<li>
                 	<a href="#">艾萨克</a>&nbsp;&lt;
                 	<a href="#">isaac</a>&gt;
                 </li>
-            	<li>詹妮花</li>
-            	<li>流觞</li>
+            	<li><a href="#">詹妮花</a></li>
+            	<li><a href="#">流觞</a></li>
                 <li>cyberspace</li>
                 <li>无聊生活</li>
                 <li>楚岑洗心</li>
@@ -75,12 +77,12 @@
     </div>
     <div class="left">
    	  <div class="lr">
-        	<div><img src="博客推荐.jpg" width="43" height="200" />
+        	<div><img src="博客推荐.jpg" width="28" height="200" />
             	
             </div>
       </div>
-        <div class="ll">dfdf</div>
-    </div>
+      <div class="ll">dfdf</div>
+  </div>
     <div class="foot">foot</div>
 </div>
 </body>
