--- a/xiangmuliu.html
+++ b/xiangmuliu.html
@@ -17,7 +17,7 @@
 		width:250px;
 		height:550px;}
 	.foot{
-		background:#C33;}
+		background:#36F;}
 	.youbian{
 		text-align:right;}
 	.boke ul{
@@ -40,7 +40,7 @@
 <body>
 <div id="zhengti">
 	<div class="top">
-    	<img src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1495509565&di=11816f4992a625b9bd801766c4066d49&imgtype=jpg&er=1&src=http%3A%2F%2Fpic2.ooopic.com%2F12%2F38%2F01%2F53bOOOPICc4_1024.jpg" width="881" height="298" />
+    	<img src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1494915167824&di=edcf8488b64c2dfea1613d8d2db08488&imgtype=0&src=http%3A%2F%2Fpic2.ooopic.com%2F12%2F70%2F36%2F72bOOOPIC69_1024.jpg" width="883" />
     </div>
     <div class="kongbai"></div>
   <div class="right">
@@ -61,12 +61,12 @@
                 </li>
             	<li><a href="#">詹妮花</a></li>
             	<li><a href="#">流觞</a></li>
-                <li>cyberspace</li>
-                <li>无聊生活</li>
-                <li>楚岑洗心</li>
-                <li>小孩儿</li>
-                <li>未名空间</li>
-                <li>dark city</li>
+                <li><a href="#">cyberspace</a></li>
+                <li><a href="#">无聊生活</a></li>
+                <li><a href="#">楚岑洗心</a></li>
+                <li><a href="#">小孩儿</a></li>
+                <li><a href="#">未名空间</a></li>
+                <li><a href="#">dark city</a></li>
                 <br>
                 <span class="youbian">
                 	<a href="#">OPML</a><a href="#">更多</a>
@@ -87,3 +87,4 @@
 </div>
 </body>
 </html>
+
