--- a/xiangmuliu.html
+++ b/xiangmuliu.html
@@ -17,7 +17,9 @@
 		width:250px;
 		height:550px;}
 	.foot{
-		background:#36F;}
+		background:#36F;
+		height:25px;
+		text-align:center;}
 	.youbian{
 		text-align:right;}
 	.boke ul{
@@ -45,7 +47,7 @@
     <div class="kongbai"></div>
   <div class="right">
     	<div class="tongji">
-        	<div><img src="样式统计.jpg" width="252" height="26" /></div>
+        	<div>样式统计</div>
         	<ul>
         		<li>用户：893人</li>
             	<li>日志：4397个</li>
@@ -53,7 +55,7 @@
          	</ul>
         </div>
         <div class="boke">
-        <div><img src="热门博客.jpg" width="252" height="27" /></div>
+        <div>热门博客</div>
         	<ul>
         		<li>
                 	<a href="#">艾萨克</a>&nbsp;&lt;
@@ -77,14 +79,11 @@
     </div>
     <div class="left">
    	  <div class="lr">
-        	<div><img src="博客推荐.jpg" width="28" height="200" />
-            	
-            </div>
+        	<div>博客推荐</div>
       </div>
-      <div class="ll">dfdf</div>
+      <div class="ll"></div>
   </div>
-    <div class="foot">foot</div>
+    <div class="foot">版权所有</div>
 </div>
 </body>
 </html>
-
