--- a/xiangmuliu.html
+++ b/xiangmuliu.html
@@ -33,10 +33,16 @@
 		height:200px;}
 	.kongbai{
 		height:10px;}
+	#ystj{
+		background:#09F;}
+	#bktj{
+		background:#09F;}
+	#rmbk{
+		background:#09F;}
 	
 </style>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>我的项目六</title>
+<title>无标题文档</title>
 </head>
 
 <body>
@@ -47,7 +53,7 @@
     <div class="kongbai"></div>
   <div class="right">
     	<div class="tongji">
-        	<div>样式统计</div>
+        	<div id="ystj">样式统计</div>
         	<ul>
         		<li>用户：893人</li>
             	<li>日志：4397个</li>
@@ -55,7 +61,7 @@
          	</ul>
         </div>
         <div class="boke">
-        <div>热门博客</div>
+        <div id="rmbk">热门博客</div>
         	<ul>
         		<li>
                 	<a href="#">艾萨克</a>&nbsp;&lt;
@@ -79,7 +85,7 @@
     </div>
     <div class="left">
    	  <div class="lr">
-        	<div>博客推荐</div>
+        	<div id="bktj">博客推荐</div>
       </div>
       <div class="ll"></div>
   </div>
