--- a/xiangmuliu2.html
+++ b/xiangmuliu2.html
@@ -15,55 +15,58 @@
 	float:right;
 	width:300px;}
 #left{
-	background:#933;
+	background:#FC9;
 	height:450px;
 	width:680px;}
 #footer{
-	background:#0F3;
-	height:150px;}
+	background:#33C;
+	height:50px;}
 .riqi{
 	background: #666;
 	float: left;
 	position: absolute;
 	left: 464px;
-	top: 254px;
+	top: 273px;
 	width: 248px;
 	height: 136px;
 }
 .boketuijian{
-	background: #FC0;
+	background: #666;
 	position: absolute;
-	left: 718px;
-	top: 257px;
+	left: 721px;
+	top: 272px;
 	width: 399px;
 	height: 136px;
 	}
 .bokesousuo{
-	background: #F00;
+	background: #666;
 	position: absolute;
-	left: 464px;
-	top: 400px;
+	left: 461px;
+	top: 419px;
 	width: 655px;
 	height: 37px;
 }
 .biaodan{
-	background: #996;
+	background: #666;
 	position: absolute;
-	left: 466px;
-	top: 444px;
+	left: 464px;
+	top: 465px;
 	width: 653px;
 	height: 34px;
 }
 .yangshituijian{
-	background: #606;
+	background: #666;
 	position: absolute;
-	left: 467px;
-	top: 489px;
+	left: 465px;
+	top: 511px;
 	width: 651px;
 	height: 202px;
 }
 #kongbai{
-	height:15px;}
+	height:30px;}
+#you{background:#039;
+height:50px;
+width:750px;}
 </style>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>无标题文档</title>
@@ -72,6 +75,7 @@
 <body>
 <div id="zhengti">
 	<div id="banner">
+    	<img src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1496113431&di=187791ee979c9db2cb9c732fb4b3b80a&imgtype=jpg&er=1&src=http%3A%2F%2Fwww.ciictj.com%2Fdata1%2Fimages%2Fbanner3.jpg" />
 	</div>
   <div id="kongbai"></div>
   <div id="right">
@@ -84,6 +88,7 @@
     <div class="yangshituijian">样式推荐</div>    
   </div>
   <div id="footer">
+  	<div id="you"><a href="#" style="color: #FFF; font-weight: bold;text-align:center;">www.wcx123.github.io</a> </div>
     </div>
 </div>
 </body>
