--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 		<p><a href="home.html">我的项目四（表单）</a></p>
 	     <p><a href="qianming.html">我的个性签名（项目五）</a></p>
 		    <p><a href="xiangmuliu.html">我的项目六</a></p>
+		     <p><a href="xiangmuliu2.html">我的项目六2</a></p>
             </td>
        </tr>
     </table>
