--- a/xiangmuliu2.html
+++ b/xiangmuliu2.html
@@ -88,7 +88,7 @@ width:750px;}
     <div class="yangshituijian">样式推荐</div>    
   </div>
   <div id="footer">
-  	<div id="you"><a href="#" style="color: #FFF; font-weight: bold;text-align:center;">www.wcx123.github.io</a> </div>
+  	<div id="you"><a href="index.html" style="color: #FFF; font-weight: bold;text-align:center;">www.wcx123.github.io</a> </div>
     </div>
 </div>
 </body>
